--- a/src/my/numberaddition/NumberAdditionUI.form
+++ b/src/my/numberaddition/NumberAdditionUI.form
@@ -139,6 +139,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField3">
+          <Properties>
+            <Property name="editable" type="boolean" value="false"/>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
